fix: thrown items now gain honing progress tech: added ricochet effect for thrown items tech: added piercing effect for thrown items and bows tech: moved shield data into slot specific folders change: shields now gain honing progress when blocking attacks change: added several honing improvements for shield plates

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2285,9 +2285,9 @@
   "tetra.slot.shield/grip": "Grip",
   "tetra.slot.shield/boss": "Boss",
 
-  "tetra/schema/shield/tower.name": "Tower plate",
-  "tetra/schema/shield/tower.description": "Craft a tower shield plate from the given materials. Tower shields can block indefinitely and has no cooldown, but it uses more integrity than other types of shields.",
-  "tetra/schema/shield/tower.slot1": "Material",
+  "tetra/schema/shield/plate/tower.name": "Tower plate",
+  "tetra/schema/shield/plate/tower.description": "Craft a tower shield plate from the given materials. Tower shields can block indefinitely and has no cooldown, but it uses more integrity than other types of shields.",
+  "tetra/schema/shield/plate/tower.slot1": "Material",
 
   "tetra.module.shield/tower.item_name": "Tower shield",
   "tetra.module.shield/tower.name": "Tower shield",
@@ -2321,9 +2321,9 @@
   "tetra.variant.tower/steel.prefix": "steel",
   "tetra.variant.tower/vent": "Vent plate tower",
 
-  "tetra/schema/shield/heater.name": "Heater plate",
-  "tetra/schema/shield/heater.description": "Craft a heater shield plate from the given materials. Heaters are medium size shields that uses less integrity than a tower shield, but can only block for a limited amount of time before going on cooldown.",
-  "tetra/schema/shield/heater.slot1": "Material",
+  "tetra/schema/shield/plate/heater.name": "Heater plate",
+  "tetra/schema/shield/plate/heater.description": "Craft a heater shield plate from the given materials. Heaters are medium size shields that uses less integrity than a tower shield, but can only block for a limited amount of time before going on cooldown.",
+  "tetra/schema/shield/plate/heater.slot1": "Material",
 
   "tetra.module.shield/heater.item_name": "Heater shield",
   "tetra.module.shield/heater.name": "Heater plate",
@@ -2357,9 +2357,9 @@
   "tetra.variant.heater/steel.prefix": "steel",
   "tetra.variant.heater/vent": "Vent plate heater",
 
-  "tetra/schema/shield/buckler.name": "Buckler plate",
-  "tetra/schema/shield/buckler.description": "Craft a buckler from the given materials. Bucklers cannot be used to block but they provide a passive toughness bonus.",
-  "tetra/schema/shield/buckler.slot1": "Material",
+  "tetra/schema/shield/plate/buckler.name": "Buckler plate",
+  "tetra/schema/shield/plate/buckler.description": "Craft a buckler from the given materials. Bucklers cannot be used to block but they provide a passive toughness bonus.",
+  "tetra/schema/shield/plate/buckler.slot1": "Material",
 
   "tetra.module.shield/buckler.item_name": "Buckler",
   "tetra.module.shield/buckler.name": "Buckler plate",
@@ -2417,28 +2417,63 @@
   "tetra.variant.straps/leather": "Leather straps",
   "tetra.variant.straps/phantom_membrane": "Phantom sinew straps",
 
-  "tetra/schema/shield/studs.name": "Studded plate",
-  "tetra/schema/shield/studs.description": "Nail studs into the shield plate to increase it's durability by a flat amount.",
-  "tetra/schema/shield/studs.slot1": "Material",
+  "tetra/schema/shield/plate/studs.name": "Studded plate",
+  "tetra/schema/shield/plate/studs.description": "Nail studs into the shield plate to increase it's durability by a flat amount.",
+  "tetra/schema/shield/plate/studs.slot1": "Material",
 
   "tetra.improvement.shield/studs.name": "Studded",
   "tetra.improvement.shield/studs.description": "Increases durability",
 
-  "tetra/schema/shield/trim.name": "Trim edge",
-  "tetra/schema/shield/trim.description": "Frame the shield with a trim to increase it's durability, the durability bonus is multiplicative.",
-  "tetra/schema/shield/trim.slot1": "Material",
+  "tetra/schema/shield/plate/trim.name": "Trim edge",
+  "tetra/schema/shield/plate/trim.description": "Frame the shield with a trim to increase it's durability, the durability bonus is multiplicative.",
+  "tetra/schema/shield/plate/trim.slot1": "Material",
 
   "tetra.improvement.shield/trim.name": "Iron trim",
   "tetra.improvement.shield/trim.description": "Increases durability",
   "tetra.improvement.shield/trim_scrap.name": "Scrap trim",
   "tetra.improvement.shield/trim_scrap.description": "Increases durability",
 
-  "tetra/schema/shield/aerodynamic_trim.name": "Aerodynamic trim",
-  "tetra/schema/shield/aerodynamic_trim.description": "Frame the shield with an aerodynamic trim which allows the shield to be thrown.",
-  "tetra/schema/shield/aerodynamic_trim.slot1": "Material",
+  "tetra/schema/shield/plate/aerodynamic_trim.name": "Aerodynamic trim",
+  "tetra/schema/shield/plate/aerodynamic_trim.description": "Frame the shield with an aerodynamic trim which allows the shield to be thrown.",
+  "tetra/schema/shield/plate/aerodynamic_trim.slot1": "Material",
 
   "tetra.improvement.shield/aerodynamic_trim.name": "Aerodynamic trim",
   "tetra.improvement.shield/aerodynamic_trim.description": "Allows the shield to be thrown",
+
+  "tetra/schema/shield/plate/ricochet_1.name": "Hone: Ricochet",
+  "tetra/schema/shield/plate/ricochet_1.description": "Improve the trim to allow the shield to hit an additional nearby enemy when thrown.",
+  "tetra/schema/shield/plate/ricochet_2.name": "Hone: Ricochet",
+  "tetra/schema/shield/plate/ricochet_2.description": "Improve the trim to allow the shield to hit two additional nearby enemies when thrown.",
+  "tetra/schema/shield/plate/ricochet_3.name": "Hone: Ricochet",
+  "tetra/schema/shield/plate/ricochet_3.description": "Improve the trim to allow the shield to hit three additional nearby enemies when thrown.",
+  "tetra.improvement.shield/ricochet.name": "Ricochet",
+  "tetra.improvement.shield/ricochet.description": "Allows the shield to hit additional nearby enemies when thrown.",
+
+  "tetra/schema/shield/plate/hone_speed_1.name": "Hone: Speed I",
+  "tetra/schema/shield/plate/hone_speed_1.description": "Hone the plate to reduce the base cooldown by a relative amount.",
+  "tetra/schema/shield/plate/hone_speed_2.name": "Hone: Speed II",
+  "tetra/schema/shield/plate/hone_speed_2.description": "Hone the module further to reduce the base cooldown (by a relative amount).",
+  "tetra/schema/shield/plate/hone_speed_3.name": "Hone: Speed III",
+  "tetra/schema/shield/plate/hone_speed_3.description": "Hone the module further to reduce the base cooldown (by a relative amount).",
+  "tetra/schema/shield/plate/hone_speed_4.name": "Hone: Speed IV",
+  "tetra/schema/shield/plate/hone_speed_4.description": "Hone the module further to reduce the base cooldown (by a relative amount).",
+  "tetra/schema/shield/plate/hone_speed_5.name": "Hone: Speed V",
+  "tetra/schema/shield/plate/hone_speed_5.description": "Hone the module further to reduce the base cooldown (by a relative amount).",
+  "tetra.improvement.plate_hone/speed.name": "Hone: Speed",
+  "tetra.improvement.plate_hone/speed.description": "Reduces the base cooldown",
+
+  "tetra/schema/shield/plate/hone_damage_1.name": "Hone: Damage I",
+  "tetra/schema/shield/plate/hone_damage_1.description": "Hone the plate to increase the base damage by a flat amount.",
+  "tetra/schema/shield/plate/hone_damage_2.name": "Hone: Damage II",
+  "tetra/schema/shield/plate/hone_damage_2.description": "Hone the module further to increase the base damage (by a flat amount).",
+  "tetra/schema/shield/plate/hone_damage_3.name": "Hone: Damage III",
+  "tetra/schema/shield/plate/hone_damage_3.description": "Hone the module further to increase the base damage (by a flat amount).",
+  "tetra/schema/shield/plate/hone_damage_4.name": "Hone: Damage IV",
+  "tetra/schema/shield/plate/hone_damage_4.description": "Hone the module further to increase the base damage (by a flat amount).",
+  "tetra/schema/shield/plate/hone_damage_5.name": "Hone: Damage V",
+  "tetra/schema/shield/plate/hone_damage_5.description": "Hone the module further to increase the base damage (by a flat amount).",
+  "tetra.improvement.plate_hone/damage.name": "Hone: Damage",
+  "tetra.improvement.plate_hone/damage.description": "Increases base damage",
 
   "tetra/schema/shield/sturdy_boss.name": "Sturdy boss",
   "tetra/schema/shield/sturdy_boss.description": "Craft a sturdy boss from the given materials, this enables the shield to be used for bashing other entities.",
