change: added durability honing options for shield plates & grips change: added damage & speed honing options for shield grips tech: moved grip schema files

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2393,9 +2393,9 @@
   "tetra.variant.buckler/steel.prefix": "steel",
   "tetra.variant.buckler/vent": "Vent plate buckler",
 
-  "tetra/schema/shield/basic_grip.name": "Basic grip",
-  "tetra/schema/shield/basic_grip.description": "Craft a basic grip from the given materials. Grips are the primary source of integrity for shields.",
-  "tetra/schema/shield/basic_grip.slot1": "Material",
+  "tetra/schema/shield/grip/basic_grip.name": "Basic grip",
+  "tetra/schema/shield/grip/basic_grip.description": "Craft a basic grip from the given materials. Grips are the primary source of integrity for shields.",
+  "tetra/schema/shield/grip/basic_grip.slot1": "Material",
 
   "tetra.module.shield/basic_grip.item_name": "Basic grip",
   "tetra.module.shield/basic_grip.name": "Basic grip",
@@ -2404,9 +2404,9 @@
   "tetra.variant.basic_grip/oak": "Basic oak grip",
   "tetra.variant.basic_grip/iron":"Basic iron grip",
 
-  "tetra/schema/shield/straps.name": "Straps",
-  "tetra/schema/shield/straps.description": "Replace the grip with straps crafted from the given materials. A shield held with straps is typically less taxing to use. Grips are the primary source of integrity for shields.",
-  "tetra/schema/shield/straps.slot1": "Material",
+  "tetra/schema/shield/grip/straps.name": "Straps",
+  "tetra/schema/shield/grip/straps.description": "Replace the grip with straps crafted from the given materials. A shield held with straps is typically less taxing to use. Grips are the primary source of integrity for shields.",
+  "tetra/schema/shield/grip/straps.slot1": "Material",
 
   "tetra.module.shield/straps.name": "Straps",
   "tetra.module.shield/straps.description": "Straps used holding the shield. A shield held with straps is typically less taxing to use. Grips are the primary source of integrity for shields.",
@@ -2416,6 +2416,72 @@
   "tetra.variant.straps/hide": "Hide straps",
   "tetra.variant.straps/leather": "Leather straps",
   "tetra.variant.straps/phantom_membrane": "Phantom sinew straps",
+
+  "tetra/schema/shield/grip/hone_speed_1_mult.name": "Hone: Speed I",
+  "tetra/schema/shield/grip/hone_speed_1_mult.description": "Hone the grip to reduce the base cooldown by a relative amount.",
+  "tetra/schema/shield/grip/hone_speed_2_mult.name": "Hone: Speed II",
+  "tetra/schema/shield/grip/hone_speed_2_mult.description": "Hone the module further to reduce the base cooldown (by a relative amount).",
+  "tetra/schema/shield/grip/hone_speed_3_mult.name": "Hone: Speed III",
+  "tetra/schema/shield/grip/hone_speed_3_mult.description": "Hone the module further to reduce the base cooldown (by a relative amount).",
+  "tetra/schema/shield/grip/hone_speed_4_mult.name": "Hone: Speed IV",
+  "tetra/schema/shield/grip/hone_speed_4_mult.description": "Hone the module further to reduce the base cooldown (by a relative amount).",
+  "tetra/schema/shield/grip/hone_speed_5_mult.name": "Hone: Speed V",
+  "tetra/schema/shield/grip/hone_speed_5_mult.description": "Hone the module further to reduce the base cooldown (by a relative amount).",
+  "tetra.improvement.grip_hone/speed_mult.name": "Hone: Speed",
+  "tetra.improvement.grip_hone/speed_mult.description": "Reduces the base cooldown",
+
+  "tetra/schema/shield/grip/hone_speed_1_flat.name": "Hone: Speed I",
+  "tetra/schema/shield/grip/hone_speed_1_flat.description": "Hone the grip to reduce the base cooldown by a flat amount.",
+  "tetra/schema/shield/grip/hone_speed_2_flat.name": "Hone: Speed II",
+  "tetra/schema/shield/grip/hone_speed_2_flat.description": "Hone the module further to reduce the base cooldown (by a flat amount).",
+  "tetra/schema/shield/grip/hone_speed_3_flat.name": "Hone: Speed III",
+  "tetra/schema/shield/grip/hone_speed_3_flat.description": "Hone the module further to reduce the base cooldown (by a flat amount).",
+  "tetra/schema/shield/grip/hone_speed_4_flat.name": "Hone: Speed IV",
+  "tetra/schema/shield/grip/hone_speed_4_flat.description": "Hone the module further to reduce the base cooldown (by a flat amount).",
+  "tetra/schema/shield/grip/hone_speed_5_flat.name": "Hone: Speed V",
+  "tetra/schema/shield/grip/hone_speed_5_flat.description": "Hone the module further to reduce the base cooldown (by a flat amount).",
+  "tetra.improvement.grip_hone/speed_flat.name": "Hone: Speed",
+  "tetra.improvement.grip_hone/speed_flat.description": "Reduces the base cooldown",
+
+  "tetra/schema/shield/grip/hone_damage_1_flat.name": "Hone: Damage I",
+  "tetra/schema/shield/grip/hone_damage_1_flat.description": "Hone the grip to increase the base damage by a flat amount.",
+  "tetra/schema/shield/grip/hone_damage_2_flat.name": "Hone: Damage II",
+  "tetra/schema/shield/grip/hone_damage_2_flat.description": "Hone the module further to increase the base damage (by a flat amount).",
+  "tetra/schema/shield/grip/hone_damage_3_flat.name": "Hone: Damage III",
+  "tetra/schema/shield/grip/hone_damage_3_flat.description": "Hone the module further to increase the base damage (by a flat amount).",
+  "tetra/schema/shield/grip/hone_damage_4_flat.name": "Hone: Damage IV",
+  "tetra/schema/shield/grip/hone_damage_4_flat.description": "Hone the module further to increase the base damage (by a flat amount).",
+  "tetra/schema/shield/grip/hone_damage_5_flat.name": "Hone: Damage V",
+  "tetra/schema/shield/grip/hone_damage_5_flat.description": "Hone the module further to increase the base damage (by a flat amount).",
+  "tetra.improvement.grip_hone/damage_flat.name": "Hone: Damage",
+  "tetra.improvement.grip_hone/damage_flat.description": "Increases base damage",
+
+  "tetra/schema/shield/grip/hone_damage_1_mult.name": "Hone: Damage I",
+  "tetra/schema/shield/grip/hone_damage_1_mult.description": "Hone the grip to increase the base damage by a relative amount.",
+  "tetra/schema/shield/grip/hone_damage_2_mult.name": "Hone: Damage II",
+  "tetra/schema/shield/grip/hone_damage_2_mult.description": "Hone the module further to increase the base damage (by a relative amount).",
+  "tetra/schema/shield/grip/hone_damage_3_mult.name": "Hone: Damage III",
+  "tetra/schema/shield/grip/hone_damage_3_mult.description": "Hone the module further to increase the base damage (by a relative amount).",
+  "tetra/schema/shield/grip/hone_damage_4_mult.name": "Hone: Damage IV",
+  "tetra/schema/shield/grip/hone_damage_4_mult.description": "Hone the module further to increase the base damage (by a relative amount).",
+  "tetra/schema/shield/grip/hone_damage_5_mult.name": "Hone: Damage V",
+  "tetra/schema/shield/grip/hone_damage_5_mult.description": "Hone the module further to increase the base damage (by a relative amount).",
+  "tetra.improvement.grip_hone/damage_mult.name": "Hone: Damage",
+  "tetra.improvement.grip_hone/damage_mult.description": "Increases base damage",
+
+  "tetra/schema/shield/grip/hone_durability_1.name": "Hone: Durability I",
+  "tetra/schema/shield/grip/hone_durability_1.description": "Hone the grip to increase the durability it provides by a flat amount.",
+  "tetra/schema/shield/grip/hone_durability_2.name": "Hone: Durability II",
+  "tetra/schema/shield/grip/hone_durability_2.description": "Further hone the durability improvement for this module, increasing the durability bonus by a flat amount.",
+  "tetra/schema/shield/grip/hone_durability_3.name": "Hone: Durability III",
+  "tetra/schema/shield/grip/hone_durability_3.description": "Further hone the durability improvement for this module, increasing the durability bonus by a flat amount.",
+  "tetra/schema/shield/grip/hone_durability_4.name": "Hone: Durability IV",
+  "tetra/schema/shield/grip/hone_durability_4.description": "Further hone the durability improvement for this module, increasing the durability bonus by a flat amount.",
+  "tetra/schema/shield/grip/hone_durability_5.name": "Hone: Durability V",
+  "tetra/schema/shield/grip/hone_durability_5.description": "Further hone the durability improvement for this module, increasing the durability bonus by a flat amount.",
+
+  "tetra.improvement.grip_hone/durability.name": "Hone: Durability",
+  "tetra.improvement.grip_hone/durability.description": "Increases durability",
 
   "tetra/schema/shield/plate/studs.name": "Studded plate",
   "tetra/schema/shield/plate/studs.description": "Nail studs into the shield plate to increase it's durability by a flat amount.",
@@ -2474,6 +2540,20 @@
   "tetra/schema/shield/plate/hone_damage_5.description": "Hone the module further to increase the base damage (by a flat amount).",
   "tetra.improvement.plate_hone/damage.name": "Hone: Damage",
   "tetra.improvement.plate_hone/damage.description": "Increases base damage",
+
+  "tetra/schema/shield/plate/hone_durability_1.name": "Hone: Durability I",
+  "tetra/schema/shield/plate/hone_durability_1.description": "Hone the plate to increase the durability it provides by a relative amount.",
+  "tetra/schema/shield/plate/hone_durability_2.name": "Hone: Durability II",
+  "tetra/schema/shield/plate/hone_durability_2.description": "Further hone the durability improvement for this module, increasing the durability bonus by a relative amount.",
+  "tetra/schema/shield/plate/hone_durability_3.name": "Hone: Durability III",
+  "tetra/schema/shield/plate/hone_durability_3.description": "Further hone the durability improvement for this module, increasing the durability bonus by a relative amount.",
+  "tetra/schema/shield/plate/hone_durability_4.name": "Hone: Durability IV",
+  "tetra/schema/shield/plate/hone_durability_4.description": "Further hone the durability improvement for this module, increasing the durability bonus by a relative amount.",
+  "tetra/schema/shield/plate/hone_durability_5.name": "Hone: Durability V",
+  "tetra/schema/shield/plate/hone_durability_5.description": "Further hone the durability improvement for this module, increasing the durability bonus by a relative amount.",
+
+  "tetra.improvement.plate_hone/durability.name": "Hone: Durability",
+  "tetra.improvement.plate_hone/durability.description": "Increases durability",
 
   "tetra/schema/shield/sturdy_boss.name": "Sturdy boss",
   "tetra/schema/shield/sturdy_boss.description": "Craft a sturdy boss from the given materials, this enables the shield to be used for bashing other entities.",
