change: added additional metal variants for all shield plates

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2317,6 +2317,20 @@
   "tetra.variant.tower/bone.prefix": "bone",
   "tetra.variant.tower/iron": "Iron tower plate",
   "tetra.variant.tower/iron.prefix": "iron",
+  "tetra.variant.tower/gold": "Golden tower plate",
+  "tetra.variant.tower/gold.prefix": "golden",
+  "tetra.variant.tower/copper": "Copper tower plate",
+  "tetra.variant.tower/copper.prefix": "copper",
+  "tetra.variant.tower/tin": "Tin tower plate",
+  "tetra.variant.tower/tin.prefix": "tin",
+  "tetra.variant.tower/silver": "Silver tower plate",
+  "tetra.variant.tower/silver.prefix": "silver",
+  "tetra.variant.tower/nickel": "Nickel tower plate",
+  "tetra.variant.tower/nickel.prefix": "nickel",
+  "tetra.variant.tower/lead": "Lead tower plate",
+  "tetra.variant.tower/lead.prefix": "lead",
+  "tetra.variant.tower/electrum": "Electrum tower plate",
+  "tetra.variant.tower/electrum.prefix": "electrum",
   "tetra.variant.tower/bronze": "Bronze tower plate",
   "tetra.variant.tower/bronze.prefix": "bronze",
   "tetra.variant.tower/steel": "Steel tower plate",
@@ -2353,6 +2367,20 @@
   "tetra.variant.heater/bone.prefix": "bone",
   "tetra.variant.heater/iron": "Iron heater plate",
   "tetra.variant.heater/iron.prefix": "iron",
+  "tetra.variant.heater/gold": "Golden heater plate",
+  "tetra.variant.heater/gold.prefix": "golden",
+  "tetra.variant.heater/copper": "Copper heater plate",
+  "tetra.variant.heater/copper.prefix": "copper",
+  "tetra.variant.heater/tin": "Tin heater plate",
+  "tetra.variant.heater/tin.prefix": "tin",
+  "tetra.variant.heater/silver": "Silver heater plate",
+  "tetra.variant.heater/silver.prefix": "silver",
+  "tetra.variant.heater/nickel": "Nickel heater plate",
+  "tetra.variant.heater/nickel.prefix": "nickel",
+  "tetra.variant.heater/lead": "Lead heater plate",
+  "tetra.variant.heater/lead.prefix": "lead",
+  "tetra.variant.heater/electrum": "Electrum heater plate",
+  "tetra.variant.heater/electrum.prefix": "electrum",
   "tetra.variant.heater/bronze": "Bronze heater plate",
   "tetra.variant.heater/bronze.prefix": "bronze",
   "tetra.variant.heater/steel": "Steel heater plate",
@@ -2389,6 +2417,20 @@
   "tetra.variant.buckler/bone.prefix": "bone",
   "tetra.variant.buckler/iron": "Iron buckler plate",
   "tetra.variant.buckler/iron.prefix": "iron",
+  "tetra.variant.buckler/gold": "Golden buckler plate",
+  "tetra.variant.buckler/gold.prefix": "golden",
+  "tetra.variant.buckler/copper": "Copper buckler plate",
+  "tetra.variant.buckler/copper.prefix": "copper",
+  "tetra.variant.buckler/tin": "Tin buckler plate",
+  "tetra.variant.buckler/tin.prefix": "tin",
+  "tetra.variant.buckler/silver": "Silver buckler plate",
+  "tetra.variant.buckler/silver.prefix": "silver",
+  "tetra.variant.buckler/nickel": "Nickel buckler plate",
+  "tetra.variant.buckler/nickel.prefix": "nickel",
+  "tetra.variant.buckler/lead": "Lead buckler plate",
+  "tetra.variant.buckler/lead.prefix": "lead",
+  "tetra.variant.buckler/electrum": "Electrum buckler plate",
+  "tetra.variant.buckler/electrum.prefix": "electrum",
   "tetra.variant.buckler/bronze": "Bronze buckler plate",
   "tetra.variant.buckler/bronze.prefix": "bronze",
   "tetra.variant.buckler/steel": "Steel buckler plate",
