change: added additional variants for the shield studded improvement

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2531,8 +2531,26 @@
   "tetra/schema/shield/plate/studs.description": "Nail studs into the shield plate to increase it's durability by a flat amount.",
   "tetra/schema/shield/plate/studs.slot1": "Material",
 
-  "tetra.improvement.shield/studs.name": "Studded",
-  "tetra.improvement.shield/studs.description": "Increases durability",
+  "tetra.improvement.shield/studs_iron.name": "Studded (iron)",
+  "tetra.improvement.shield/studs_iron.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs_gold.name": "Studded (gold)",
+  "tetra.improvement.shield/studs_gold.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs_copper.name": "Studded (copper)",
+  "tetra.improvement.shield/studs_copper.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs_tin.name": "Studded (tin)",
+  "tetra.improvement.shield/studs_tin.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs_silver.name": "Studded (silver)",
+  "tetra.improvement.shield/studs_silver.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs_nickel.name": "Studded (nickel)",
+  "tetra.improvement.shield/studs_nickel.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs_lead.name": "Studded (lead)",
+  "tetra.improvement.shield/studs_lead.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs_electrum.name": "Studded (electrum)",
+  "tetra.improvement.shield/studs_electrum.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs_bronze.name": "Studded (bronze)",
+  "tetra.improvement.shield/studs_bronze.description": "Increases durability by a flat amount",
+  "tetra.improvement.shield/studs_steel.name": "Studded (steel)",
+  "tetra.improvement.shield/studs_steel.description": "Increases durability by a flat amount",
 
   "tetra/schema/shield/plate/trim.name": "Trim edge",
   "tetra/schema/shield/plate/trim.description": "Frame the shield with a trim to increase it's durability, the durability bonus is multiplicative.",
